<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the detail view -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailViewActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_product_supplier"
                android:hint="@string/hint_product_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Order more from supplier field -->
            <Button
                android:id="@+id/order_more_product_supplier"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/product_order_more_supplier"
                android:paddingRight="16dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Current Quantity field -->
            <TextView
                android:id="@+id/current_product_quantity"
                tools:text="Current Quantity"
                android:paddingTop="10dp"
                style="@style/EditorFieldStyle" />

            <!-- Quantity decrease field -->
            <EditText
                android:id="@+id/decrease_product_quantity"
                android:hint="@string/hint_product_quantity_decrease"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Quantity decrease button-->
            <Button
                android:id="@+id/decrease_product_quantity_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/decrease_quantity_button"
                android:paddingRight="16dp" />

            <!-- Quantity increase field-->
            <EditText
                android:id="@+id/increase_product_quantity"
                android:hint="@string/hint_product_quantity_increase"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Quantity increase button-->
            <Button
                android:id="@+id/increase_product_quantity_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/increase_quantity_button"
                android:paddingRight="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <!-- price (rupees/Rs.) -->
            <TextView
                android:id="@+id/label_price"
                android:text="@string/product_price"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Image category -->
    <LinearLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_image"
            style="@style/CategoryStyle" />

        <!-- Upload field -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Image upload button -->
            <Button
                android:id="@+id/button_new_image_upload"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/image_upload_button"
                android:paddingRight="16dp"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- UploadedImage category -->
    <LinearLayout
        android:id="@+id/container_uploaded_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Current Image view -->
        <ImageView
            android:id="@+id/view_uploaded_image"
            android:layout_height="36dp"
            android:layout_width="36dp"
            android:paddingRight="16dp"/>
    </LinearLayout>
</LinearLayout>