<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of products -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textAlignment="center"
            android:textColor="#2B3D4D"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="12sp"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="Name" />
        <TextView
            android:id="@+id/quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/listView_label_quantity"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#AEB6BD"
            tools:text="Quantity" />
        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#AEB6BD"
            tools:text="Quantity" />
    </LinearLayout>

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_marginTop="8dp"
        android:text="@string/listView_label_price"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"
        tools:text="Price" />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"
        tools:text="Price" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:focusable="false"
        android:text="@string/sale_button"
        android:textAlignment="center"/>

</LinearLayout>